fix validation and signup form

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "frontend": "file:",
+    "libphonenumber-js": "^1.11.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
