update search page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.2.0",
-    "@mui/material": "^6.2.0",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
+    "@mui/private-theming": "^6.3.0",
     "@mui/styled-engine-sc": "^6.2.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "date-fns": "^2.28.0",
     "frontend": "file:",
     "libphonenumber-js": "^1.11.17",
     "react": "^18.2.0",
