Added map frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "frontend": "file:",
+    "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.0.2",
