added endpoint for google maps

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 # runs the data.sql file to insert the data always when the application starts
-# spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.data-locations=classpath:data.sql
