--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,12 +7,9 @@ spring.datasource.url= jdbc:mysql://localhost:3306/smartParking
 spring.datasource.username= smartParking
 spring.datasource.password= smartParking123
 
-# This property is used to specify how we'll handle data ex:- update -> update the remaining data,
-# ex: create-drop -> everytime create new tables and delete on termination of the program
-spring.jpa.hibernate.ddl-auto=update
-
 # Driver Class for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# This is used to show sql whenever any query is executed by hibernate
-spring.jpa.show-sql: true
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
