--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
+    "recharts": "^2.15.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4"
   },
