--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.2.0",
     "frontend": "file:",
     "libphonenumber-js": "^1.11.17",
+    "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
