--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,20 @@
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
     "@mui/styled-engine-sc": "^6.2.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "frontend": "file:",
+    "install": "^0.13.0",
     "libphonenumber-js": "^1.11.17",
+    "npm": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-pdf": "^9.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
